# sites-count

./: Makefile  README.md  pyproject.toml  setup.cfg
.github/workflows/: sites_count.yml
sites_count/: __init__.py  sql.py
sites_count/counter/: __init__.py  beeline.py  counter.py  index.py  kcell.py  tele2.py  tele2_beeline.py
tests/: __init__.py  conftest.py  test_count_sites.py  test_count_sites_by_operators.py
